include/siglib.h

#define SIGLIB                          1                           
#define SLData_t                double
#define SLArrayIndex_t          long
#define SLError_t               long
#define const
#define SLComplexRect_s         double
#define SLComplexPolar_s        double
#define SIGLIB_FUNC_DECL        _stdcall
  SLData_t SIGLIB_FUNC_DECL SUF_SiglibVersion (
  void);
  SLError_t SIGLIB_FUNC_DECL SUF_ClearDebugfprintf (
  void);
  SLError_t SIGLIB_FUNC_DECL SUF_Debugfprintf (
  const char *ArgumentType,
  ...);
  SLError_t SIGLIB_FUNC_DECL SUF_Debugvfprintf (
  const char *format,
  va_list);
  SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintArray (
  const SLData_t *,
  const SLArrayIndex_t);
  SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintMatrix (
  const SLData_t *,
  const SLArrayIndex_t,
  const SLArrayIndex_t);
  SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintPolar (
  const SLComplexPolar_s);
  SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintRectangular (
  const SLComplexRect_s);
  SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintIIRCoefficients (
  const SLData_t *,
  SLArrayIndex_t);
  SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintCount (
  const char *String);
  void SIGLIB_FUNC_DECL SUF_MSDelay (
  const SLFixData_t Delay);
  void SIGLIB_FUNC_DECL SIF_Fft (
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_Rfft (
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLArrayIndex_t * SIGLIB_INPUT_PTR_DECL,                     
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_Cfft (
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLArrayIndex_t * SIGLIB_INPUT_PTR_DECL,                     
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_Cifft (
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLArrayIndex_t * SIGLIB_INPUT_PTR_DECL,                     
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_BitReverseReorder (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  const SLArrayIndex_t * SIGLIB_INPUT_PTR_DECL,                     
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_IndexBitReverseReorder (
  const SLArrayIndex_t * SIGLIB_INPUT_PTR_DECL,                     
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SIF_FastBitReverseReorder (
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  const SLArrayIndex_t);                                            
  SLError_t SIGLIB_FUNC_DECL SIF_ZoomFft (
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_ZoomFft (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLArrayIndex_t * SIGLIB_INOUT_PTR_DECL,                           
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLArrayIndex_t * SIGLIB_INOUT_PTR_DECL,                           
  const SLData_t,                                                   
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLArrayIndex_t * SIGLIB_INOUT_PTR_DECL,                           
  SLArrayIndex_t * SIGLIB_INOUT_PTR_DECL,                           
  SLArrayIndex_t * SIGLIB_INOUT_PTR_DECL,                           
  SLArrayIndex_t * SIGLIB_INOUT_PTR_DECL,                           
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLArrayIndex_t * SIGLIB_INPUT_PTR_DECL,                     
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLFixData_t,                                                
  const SLFixData_t,                                                
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SIF_ZoomFftSimple (
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_ZoomFftSimple (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLData_t * SIGLIB_INOUT_PTR_DECL,                                 
  SLArrayIndex_t * SIGLIB_INOUT_PTR_DECL,                           
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLArrayIndex_t * SIGLIB_INOUT_PTR_DECL,                           
  const SLData_t,                                                   
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLArrayIndex_t * SIGLIB_INPUT_PTR_DECL,                     
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SIF_FdHilbert (
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLArrayIndex_t * SIGLIB_OUTPUT_PTR_DECL,                          
  SLData_t *,                                                       
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_FdHilbert (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLArrayIndex_t * SIGLIB_INPUT_PTR_DECL,                     
  const SLData_t,                                                   
  const SLArrayIndex_t,                                             
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_InstantFreq (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_Rdft (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_Ridft (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_FftShift (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  const SLArrayIndex_t);                                            
  void SIGLIB_FUNC_DECL SDA_CfftShift (
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  const SLData_t * SIGLIB_INPUT_PTR_DECL,                           
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  SLData_t * SIGLIB_OUTPUT_PTR_DECL,                                
  const SLArrayIndex_t);                                            