Examples/DLLExamples/VBTest/SigLibGlobal.NET.bas


                ' QAM constants
Global Const SIGLIB_QAM16_PEAK_NORM As Double = 8#      ' Peak magnitude of perfect constellation
Global Const SIGLIB_QAM16_OFFSET As Double = 10#        ' 8 * 5 * 0.25 - 8 is peak
Global Const SIGLIB_QAM16_SCALE As Double = 0.1875      ' 3 * 0.5 * 0.125 - 8 is peak

                ' QPSK constants
Global Const SIGLIB_QPSK_PEAK_NORM As Double = 8#       ' Peak magnitude of perfect constellation
Global Const SIGLIB_QPSK_OFFSET As Double = 10#         ' 8 * 5 * 0.25 - 8 is peak
Global Const SIGLIB_QPSK_SCALE As Double = 10#          ' 8 * 5 * 0.25 - 8 is peak

' SigLib complex data structures
                ' Complex Cartesian (Rectangular) numbers
Type SLComplexRect_s
        real As Double
        imag As Double
End Type

                ' Complex Polar numbers
Type SLComplexPolar_s
        magn As Double
        angle As Double
End Type


' SigLib enumerated data types

' Window types
Global Const SIGLIB_HANNING As Integer = 0
Global Const SIGLIB_HAMMING As Integer = 1
Global Const SIGLIB_GENERALIZED_COSINE As Integer = 2
Global Const SIGLIB_BLACKMAN As Integer = 3
Global Const SIGLIB_BARTLETT_TRIANGLE_ZERO_END_POINTS As Integer = 4
Global Const SIGLIB_BARTLETT_TRIANGLE_NON_ZERO_END_POINTS  As Integer = 5
Global Const SIGLIB_KAISER As Integer = 6
Global Const SIGLIB_BLACKMAN_HARRIS As Integer = 7
Global Const SIGLIB_RECTANGLE As Integer = 8
Global Const SIGLIB_FLAT_TOP As Integer = 9



' Signal generation types
Global Const SIGLIB_SINE_WAVE As Integer = 0
Global Const SIGLIB_COSINE_WAVE As Integer = 1
Global Const SIGLIB_WHITE_NOISE As Integer = 2
Global Const SIGLIB_GAUSSIAN_NOISE As Integer = 3
Global Const SIGLIB_CHIRP_LIN As Integer = 4
Global Const SIGLIB_CHIRP_NL As Integer = 5
Global Const SIGLIB_SQUARE_WAVE As Integer = 6
Global Const SIGLIB_TRIANGLE_WAVE As Integer = 7
Global Const SIGLIB_IMPULSE As Integer = 8
Global Const SIGLIB_IMPULSE_STREAM As Integer = 9
Global Const SIGLIB_STEP As Integer = 10
Global Const PN_SEQUENCE As Integer = 11
Global Const SIGLIB_DC_LEVEL As Integer = 12

' Signal array fill modes
Global Const SIGLIB_FILL As Integer = 0
Global Const SIGLIB_ADD As Integer = 1


' Signal data types
Global Const SIGLIB_SIGNED_DATA As Integer = 0
Global Const SIGLIB_UNSIGNED_DATA As Integer = 1

' Echo types - feedbackward / feedforward
Global Const SIGLIB_ECHO As Integer = 0
Global Const SIGLIB_REVERB As Integer = 1

' Rounding of data mode
Global Const SIGLIB_ROUND_UP As Integer = 0
Global Const SIGLIB_ROUND_TO_NEAREST As Integer = 1
Global Const SIGLIB_ROUND_DOWN As Integer = 2
Global Const SIGLIB_ROUND_TO_ZERO As Integer = 3
Global Const SIGLIB_ROUND_AWAY_FROM_ZERO As Integer = 4

' Data modulo arithmetic mode
Global Const SIGLIB_SINGLE_SIDED_MODULO As Integer = 0
Global Const SIGLIB_DOUBLE_SIDED_MODULO As Integer = 1

' Data clipping modes
Global Const SIGLIB_CLIP_ABOVE As Integer = 0
Global Const SIGLIB_CLIP_BOTH As Integer = 1
Global Const SIGLIB_CLIP_BELOW As Integer = 2

' Data threshold and clamping types
Global Const SIGLIB_SINGLE_SIDED_THOLD As Integer = 0
Global Const SIGLIB_DOUBLE_SIDED_THOLD As Integer = 1

' Zero crossing types
Global Const SIGLIB_POSITIVE_LEVEL_CROSS As Integer = 0
Global Const SIGLIB_NEGATIVE_LEVEL_CROSS As Integer = 1
Global Const SIGLIB_ALL_LEVEL_CROSS As Integer = 2

' Arbitrary FFT type
Global Const SIGLIB_ARB_FFT_DO_CZT As Integer = 0          ' Array is NOT integer power of 2 length, use chirp z-transform
Global Const SIGLIB_ARB_FFT_DO_FFT As Integer = 1          ' Array is integer power of 2 length, use FFT

' Asynchronous data parity types
Global Const SIGLIB_NO_PARITY As Integer = 0
Global Const SIGLIB_EVEN_PARITY As Integer = 1
Global Const SIGLIB_ODD_PARITY As Integer = 2

' Early-late gate trigger timing
Global Const SIGLIB_ELG_TRIGGER_START As Integer = 0       ' Locate the trigger at the start of the symbol
Global Const SIGLIB_ELG_TRIGGER_MIDDLE As Integer = 1      ' Locate the trigger in the middle of the symbol

' Costas loop feedback mode
Global Const COSTAS_LOOP_MULTIPLY_LOOP As Integer = 0
Global Const COSTAS_LOOP_POLARITY_LOOP As Integer = 1
Global Const COSTAS_LOOP_HARD_LIMITED_LOOP As Integer = 2

' Normalized filter coefficients
Global Const SIGLIB_BUTTERWORTH_IIR_NORM_COEFFS = 0
Global Const SIGLIB_BESSEL_IIR_NORM_COEFFS = 1

' 3x3 filter coefficients
Global Const SIGLIB_EDGE_ENHANCEMENT = 0
Global Const SIGLIB_HORIZONTAL_EDGE = 1
Global Const SIGLIB_VERTICAL_EDGE = 2

' Signal coherence type - used in order analysis
Global Const SIGLIB_SIGNAL_COHERENT = 0
Global Const SIGLIB_SIGNAL_INCOHERENT = 1

' Find type
Global Const SIGLIB_FIND_GREATER_THAN_ZERO = 0
Global Const SIGLIB_FIND_GREATER_THAN_OR_EQUAL_TO_ZERO = 1
Global Const SIGLIB_FIND_EQUAL_TO_ZERO = 2
Global Const SIGLIB_FIND_LESS_THAN_ZERO = 3
Global Const SIGLIB_FIND_LESS_THAN_OR_EQUAL_TO_ZERO = 4
Global Const SIGLIB_FIND_NOT_EQUAL_TO_ZERO = 5

' Compare type
Global Const SIGLIB_NOT_EQUAL = 0
Global Const SIGLIB_EQUAL = 1

' Data de-glitch modes
Global Const SIGLIB_DEGLITCH_ABOVE As Integer = 1
Global Const SIGLIB_DEGLITCH_BOTH As Integer = 0
Global Const SIGLIB_DEGLITCH_BELOW As Integer = -1


' Function declarations

' SigLib utility functions

Declare Function SUF_SiglibVersion Lib "SIGLIB.DLL"() As Double
' The following functionality is not supported by VB due to the fact
' that the functions take a variable number of arguments
'SFIX SIGLIB_FUNC_DECL SUF_ClearDebugfprintf (void);
'void SUF_Debugfprintf (const char *ArgumentType, ...);
'SFIX SIGLIB_FUNC_DECL SUF_Debugvfprintf (const char *format, va_list argptr);
'SFIX SIGLIB_FUNC_DECL SUF_DebugPrintArray (const SFLOAT *, const SFIX);
'SFIX SIGLIB_FUNC_DECL SUF_DebugPrintMatrix (const SFLOAT *, const SFIX, const SFIX);
'SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintPolar (const SLSLComplexPolar_s);
'SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintRectangular (const SLSLComplexRect_s);
'SLError_t SIGLIB_FUNC_DECL SUF_DebugPrintIIRCoefficients (const SLData_t *, SLArrayIndex_t);
Declare Function SUF_DebugPrintCount Lib "SIGLIB.DLL" (ByRef pString As String) As Integer
Declare Sub SUF_MSDelay (ByVal iData As Integer)




' Fast Fourier Transform Functions

Declare Sub SIF_Fft Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Integer, _
        ByVal iData As Integer)

Declare Sub SDA_Rfft Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer)

Declare Sub SDA_Cfft Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer)

Declare Sub SDA_Cifft Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer)

Declare Sub SDA_BitReverseReorder Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer)

Declare Sub SDA_IndexBitReverseReorder Lib "SIGLIB.DLL" (ByRef iPtr As Integer, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer)

Declare Sub SIF_FastBitReverseReorder Lib "SIGLIB.DLL" (ByRef iPtr As Integer, _
        ByVal iData As Integer)

' Generic Fourier Transform Functions

Declare Sub SIF_ZoomFft Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByRef iPtr As Integer, _
        ByRef iPtr As Integer, _
        ByRef iPtr As Integer, _
        ByRef iPtr As Integer, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer)

Declare Sub SDA_ZoomFft Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal fData As Double, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByRef iPtr As Integer, _
        ByRef iPtr As Integer, _
        ByRef iPtr As Integer, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer)

Declare Sub SIF_ZoomFftSimple Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer)

Declare Sub SDA_ZoomFftSimple Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal fData As Double, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal fData As Double, _
        ByRef iPtr As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer, _
        ByVal iData As Integer)

Declare Sub SIF_FdHilbert Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByRef fpBuffer As Double, _
        ByVal iData As Integer)

Declare Sub SDA_FdHilbert Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef iPtr As Integer, _
        ByVal fData As Double, _
        ByVal iData As Integer, _
        ByVal iData As Integer)

Declare Sub SDA_InstantFreq Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByVal iData As Integer)

Declare Sub SDA_Rdft Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByVal iData As Integer)

Declare Sub SDA_Ridft Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByVal iData As Integer)

Declare Sub SDA_FftShift Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByVal iData As Integer)

Declare Sub SDA_CfftShift Lib "SIGLIB.DLL" (ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByRef fpBuffer As Double, _
        ByVal iData As Integer)

' Arbitrary Length Fast Fourier Transform Functions
